# rspy

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: rspy.rs
src/core/: config.rs  constants.rs  error.rs  logger.rs  mod.rs
src/monitoring/: dbus.rs  filesystem.rs  mod.rs  process.rs  scanner.rs
src/utils/: format.rs
